# SAKURA

./: pyproject.toml  run_phi4_multimodal.py  run_qwen2_audio.py  translate.py
data/Animal/: metadata_tw.csv
data/Emotion/: metadata_tw.csv
data/Gender/: metadata_tw.csv
data/Language/: metadata_tw.csv
evaluation/: llm_judge.py
