[project]
name = "sakura"
version = "0.1.0"
description = "The extended SAKURA to support local LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "pandas>=2.2.3",
    "qwen-omni-utils[decord]>=0.0.4",
    "torchvision>=0.22.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.51.3-Qwen2.5-Omni-preview" }
